--- a/st_mgt/templates/faculty/manage_faculty.html
+++ b/st_mgt/templates/faculty/manage_faculty.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Manage Faculty</title>
     <meta name="csrf-token" content="{{ csrf_token }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -14,10 +15,31 @@
     <script src="{% static 'js/delete_manage.js' %}"></script>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="{% url 'admin_dashboard' %}" class="navbar-brand">Student Management System</a>
+            <div class="navbar-toggle" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="navbar-menu">
+                <a href="{% url 'admin_dashboard' %}">Dashboard</a>
+                <a href="{% url 'student_list' %}">Students</a>
+                <a href="{% url 'faculty_list' %}" class="active">Faculty</a>
+                <a href="{% url 'course_list' %}">Courses</a>
+                <a href="{% url 'task_list' %}">Tasks</a>
+            </div>
+            <div class="user-info">
+                <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
+            </div>
+        </div>
+    </nav>
+
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> <!-- This will print when user creation is successful-->
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
         {% endfor %}
     </ul>
     {% endif %}
