--- a/st_mgt/templates/students/student_list.html
+++ b/st_mgt/templates/students/student_list.html
@@ -116,7 +116,7 @@
 
     <!-- Student Creation Form -->
     <div class="creation-form">
-        <h2>Update Details of New Student</h2>
+        <h2>Create New Student</h2>
         <form method="POST">
             {% csrf_token %}
             {{ student_form.as_p }}
